# firecrawl-sdk

./: Cargo.toml  README.md
firecrawl-mcp/: Cargo.toml
firecrawl-mcp/src/: controller.rs  lib.rs  main.rs  mpsc.rs  services.rs
firecrawl-mcp/src/controller/: batch_scrape.rs  crawl.rs  map.rs  scrape.rs  search.rs
firecrawl-sdk/: Cargo.toml
firecrawl-sdk/examples/: example.rs
firecrawl-sdk/src/: batch_scrape.rs  crawl.rs  document.rs  error.rs  lib.rs  map.rs  scrape.rs  search.rs
firecrawl-sdk/tests/: e2e_with_auth.rs
src/: crawl.rs  lib.rs  map.rs  scrape.rs
