[workspace]
members = ["firecrawl-sdk", "firecrawl-mcp"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["firecrawl-sdk"]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = [] }
reqwest = { version = "0.12", features = ["http2", "rustls-tls", "gzip"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9"
thiserror = "2.0"
schemars = "0.8"
anyhow = "1.0"
axum = "0.7"
dotenv = "0.15"
hyper = { version = "1", features = [] }
rmcp = { version = "0.1", features = ["server"] }
tracing = "0.1"
tracing-subscriber = "0.3"
firecrawl-sdk = { path = "./firecrawl-sdk", version = "0" }
async-claude = "0.15"
futures = "0"

# dev dependencies
assert_matches = "1.5"
dotenvy = "0.15"
