[package]
name = "firecrawl-mcp"
version = "0.0.3"
edition = "2021"
description = "Rust SDK for Firecrawl MCP."
homepage = "https://github.com/washanhanzi/firecrawl-sdk"
repository = "https://github.com/washanhanzi/firecrawl-sdk"
license = "MIT"

[lib]
path = "src/lib.rs"
name = "firecrawl_mcp"

[[bin]]
name = "std_io"
path = "src/bin/std_io.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] } # Async runtime
axum = { workspace = true } # Web framework
hyper = { workspace = true, features = ["full"] } # HTTP types
serde = { workspace = true, features = ["derive"] } # Serialization
serde_json = { workspace = true } # JSON handling
tracing = { workspace = true } # Logging
tracing-subscriber = { workspace = true, features = [
    "env-filter",
] } # Logging setup
dotenv = { workspace = true } # Environment variable management
anyhow = { workspace = true } # Error handling
schemars = { workspace = true } # JSON Schema generation
serde_with = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "transport-io",
    "transport-sse",
    "transport-sse-server",
] }
firecrawl-sdk = { workspace = true, features = ["mcp_tool"] }
async-claude = { workspace = true, features = ["tool"] }
once_cell = { workspace = true }
