[package]
name = "firecrawl-mcp"
version = "0.2.0"
edition = "2024"
description = "Rust SDK for Firecrawl MCP."
homepage = "https://github.com/washanhanzi/firecrawl-sdk"
repository = "https://github.com/washanhanzi/firecrawl-sdk"
license = "MIT"

[lib]
path = "src/lib.rs"
name = "firecrawl_mcp"

[[bin]]
name = "std_io"
path = "src/bin/std_io.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "client",
    "transport-io",
    "transport-sse",
    "transport-sse-server",
] }
firecrawl-sdk = { workspace = true, features = ["mcp_tool"] }
async-claude = { workspace = true, features = ["tool"] }
reqwest = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }

[features]
default = ["batch_scrape", "crawl", "map", "scrape", "search"]
batch_scrape = []
crawl = []
map = []
scrape = []
search = []
