[package]
name = "firecrawl-mcp"
version = "0.7.1"
edition = "2024"
description = "Rust SDK for Firecrawl MCP."
homepage = "https://github.com/washanhanzi/firecrawl-sdk"
repository = "https://github.com/washanhanzi/firecrawl-sdk"
license = "MIT"

[lib]
path = "src/lib.rs"
name = "firecrawl_mcp"

[[bin]]
name = "std_io"
path = "src/bin/std_io.rs"

[[bin]]
name = "sse"
path = "src/bin/sse.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true }
firecrawl-sdk = { workspace = true, features = ["mcp-tool"] }
async-claude = { workspace = true, features = ["tool"] }
reqwest = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }

[features]
default = ["batch-scrape", "crawl", "map", "scrape", "search"]
self-host = ["firecrawl-sdk/self-host"]
batch-scrape = []
crawl = []
map = []
scrape = []
search = []
